# wasm-cxx-starter

./: .gitignore  README.md  package.json  tsconfig.json
__tests__/: main.ts
src/: WasmModule.d.ts  index.ts
wasm/: CMakeLists.txt
wasm/src/: GraphicsManager.cpp  GraphicsManager.hpp  main.cpp
web/: application.ts  index.template.html  main.ts  package.json  tsconfig.json  webpack.config.js
web/public/: index.template.html
web/src/: application.ts  main.ts
